# javierEd.github.io

./: Cargo.toml  Dioxus.toml  package-lock.json  package.json  style.css
.github/workflows/: gh-pages.yaml
locales/: en.ftl  es.ftl  pt.ftl
src/: app.rs  components.rs  constants.rs  hooks.rs  icons.rs  layout.rs  main.rs  pages.rs
