[package]
name = "website"
version = "0.0.0-alpha.0"
authors = ["Javier E. <jaedns@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-sys = { version = "0.3.82", features = [
    "HtmlDivElement",
    "HtmlSpanElement",
], optional = true }

[features]
default = ["web"]
web = ["dep:web-sys", "dioxus/web"]
server = ["dioxus/server"]
